Apply CSS site wide, fix profile page issues, and fix visible re-paints in Firefox (#12)

--- a/css/osgh.css
+++ b/css/osgh.css
@@ -17,13 +17,13 @@
   }
 }
 
-/* Slightly more compact header tabs */
-.UnderlineNav-body .UnderlineNav-item {
+/* Slightly more compact header tabs (excluding sticky header on user profile page) */
+body:not(.page-profile) .UnderlineNav-body .UnderlineNav-item {
   padding: 5px 14px 3px;
 }
 
-/* Highlight the selected page in the header */
-.UnderlineNav-item.selected {
+/* Highlight the selected page in the header (excluding sticky header on user profile page) */
+body:not(.page-profile) .UnderlineNav-item.selected {
   border-radius: 3px 3px 0 0;
   background: #fff;
   border-left: 1px solid #e1e4e8;
@@ -184,4 +184,30 @@ body .btn-outline[disabled] {
   background: #fafbfc;
   border-color: rgba(27,31,35,.15);
   box-shadow: 0 1px 0 rgba(27,31,35,.04), inset 0 1px 0 hsla(0,0%,100%,.25);
+}
+
+/* User profile page: move status badge back below avatar image */
+.user-status-container .user-status-circle-badge-container {
+  position: unset;
+  width: auto;
+  height: auto;
+  margin: 4px 0 0;
+}
+.user-status-circle-badge-container .user-status-circle-badge {
+  border-radius: 6px;
+  width: 100%;
+}
+body .user-status-circle-badge .user-status-message-wrapper {
+  width: 100%;
+  opacity: 1;
+}
+body .user-status-circle-badge-container .user-status-emoji-container {
+  margin-right: 8px !important;
+}
+body .user-status-circle-badge-container .user-status-circle-badge,
+body .user-status-circle-badge-container:hover .user-status-circle-badge {
+  box-shadow: none; 
+}
+.user-status-message-wrapper .css-truncate.css-truncate-target {
+  white-space: auto;
 }
